src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Sub_Function__c</fullName>
        <label>Sub Function</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Function__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Business Analyst</fullName>
                </value>
                <value>
                    <fullName>C-Suite</fullName>
                </value>
                <value>
                    <fullName>Data Analytics DB</fullName>
                </value>
                <value>
                    <fullName>Data Wharehouse</fullName>
                </value>
                <value>
                    <fullName>Groovy / Grails</fullName>
                </value>
                <value>
                    <fullName>Hadoop</fullName>
                </value>
                <value>
                    <fullName>MPP Data Platform</fullName>
                </value>
                <value>
                    <fullName>Other No SQL Data</fullName>
                </value>
                <value>
                    <fullName>Product Owner / Manager</fullName>
                </value>
                <value>
                    <fullName>RabbitMQ</fullName>
                </value>
                <value>
                    <fullName>RDBMS</fullName>
                </value>
                <value>
                    <fullName>Redis</fullName>
                </value>
                <value>
                    <fullName>Spring /  Java</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Temp_Master_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Temp Master Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Temp_Wave_ID__c</fullName>
        <label>Temp Wave ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upload_Code__c</fullName>
        <description>Used by Marketing (CMaher) to categorize the upload requests in Marketo.</description>
        <label>Upload Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vendor_Qualified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To be used by third-party vendors to denote that a lead was qualified and passed to the appropriate Pivotal rep.  To be used to make reporting on vendor performance easier</description>
        <inlineHelpText>Only for third-party vendors to indicate lead was qualified and passed to the appropriate Pivotal rep.</inlineHelpText>
        <label>Vendor Qualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Working_Lead_Priority__c</fullName>
        <inlineHelpText>This field is to help ISRs / Lead Owners prioritize follow up for leads they are working on.</inlineHelpText>
        <label>Lead Priority</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X18_Digit_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>18 Digit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Company_Was_Founded__c</fullName>
        <label>Year Company Was Founded</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Date__c</fullName>
        <label>Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Program_Id__c</fullName>
        <label>Acquisition Program Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Program__c</fullName>
        <label>Acquisition Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_City__c</fullName>
        <label>Inferred City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Company__c</fullName>
        <label>Inferred Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Country__c</fullName>
        <label>Inferred Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Metropolitan_Area__c</fullName>
        <label>Inferred Metropolitan Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Phone_Area_Code__c</fullName>
        <label>Inferred Phone Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Postal_Code__c</fullName>
        <label>Inferred Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_State_Region__c</fullName>
        <label>Inferred State Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Lead_Score__c</fullName>
        <label>Lead Score</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Referrer__c</fullName>
        <label>Original Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Search_Engine__c</fullName>
        <label>Original Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Search_Phrase__c</fullName>
        <label>Original Search Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Source_Info__c</fullName>
        <label>Original Source Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Source_Type__c</fullName>
        <label>Original Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <sharingModel>Read</sharingModel>
    <listViews>
        <fullName>AMER_Named_Acct_Lead_Queue_Lead</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Matched_Account_ISR__c</columns>
        <columns>Matched_Account_Region__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>Matched_Account_Owner__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Raw,Back to Marketing,Rejected</value>
        </filters>
        <label>AMER Named Acct Lead Queue</label>
        <queue>AMER_Named_Acct_Lead_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>APJ_Lead_Queue</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>Most_Recent_Lead_Source_Description__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Raw,Back to Marketing,Rejected</value>
        </filters>
        <label>APJ Lead Queue</label>
        <queue>APJ_Lead_Queue</queue>
        <sharedTo>
            <group>Lead_Catch_All_Queue_Group</group>
            <group>SFDC_Support</group>
            <group>Verticurl</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>APJ_Named_Acct_Lead_Queue_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>LeanData__Matched_Account_Billing_Country__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Is_Matched_Account_Named__c</columns>
        <columns>Matched_Account_Owner__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Raw,Back to Marketing,Rejected</value>
        </filters>
        <label>APJ Named Acct Lead Queue</label>
        <queue>APJ_Named_Acct_Lead_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Working</value>
        </filters>
        <label>4 - All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>AllWorkingLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Working</value>
        </filters>
        <label>All Working Leads</label>
    </listViews>
    <listViews>
        <fullName>All_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Mine</filterScope>
        <label>5 - All Leads</label>
    </listViews>
    <listViews>
        <fullName>BD_Deal_Reg_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Hortonworks Deal Reg</label>
        <queue>BD_Deal_Reg</queue>
        <sharedTo>
            <group>Hortonworks_Deal_Reg</group>
            <group>Partnership_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Data_Lead_Queue_Lead</fullName>
        <columns>LEAD.STATUS</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>LeanData__Matched_Account_Name__c</columns>
        <columns>Matched_Account_Owner__c</columns>
        <columns>Matched_Account_ISR__c</columns>
        <columns>Matched_Account_Region__c</columns>
        <columns>Most_Recent_Lead_Source_Description__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Raw,Back to Marketing,Rejected</value>
        </filters>
        <label>Data Lead Queue</label>
        <queue>Data_Lead_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_Named_Acct_Lead_Queue_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Matched_Account_Owner__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Raw,Back to Marketing,Rejected</value>
        </filters>
        <label>EMEA Named Acct Lead Queue</label>
        <queue>EMEA_Named_Acct_Lead_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GLOBAL_Lead_Catch_All_Queue</fullName>
        <columns>Is_Matched_Account_Named__c</columns>
        <columns>Matched_Account_ISR__c</columns>
        <columns>Matched_Account_Region__c</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.FIRST_NAME</columns>
        <columns>LEAD.LAST_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Matched_Account_Owner__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Raw,Back to Marketing,Rejected</value>
        </filters>
        <label>GLOBAL Lead Catch All Queue</label>
        <queue>Lead_Catch_All_Queue</queue>
    </listViews>
    <listViews>
        <fullName>GLOBAL_Named_Acct_Lead_Queue_Lead</fullName>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Is_Matched_Account_Named__c</columns>
        <columns>Matched_Account_Owner__c</columns>
        <columns>Matched_Account_ISR__c</columns>
        <columns>Matched_Account_Region__c</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.COUNTRY</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Raw,Back to Marketing,Rejected</value>
        </filters>
        <label>GLOBAL Named Acct Lead Queue</label>
        <queue>GLOBAL_Named_Acct_Lead_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Global_Event_PCF_Virtual_User_Group_Beta</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Global_Event_PCF Virtual User Group Beta</label>
    </listViews>
    <listViews>
        <fullName>Labs_Contact_Us_Form</fullName>
        <booleanFilter>((3 OR 4) OR (1 AND 5) OR (2 AND 5)) AND 6</booleanFilter>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.STATUS</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Original_Lead_Source_Description__c</columns>
        <columns>Most_Recent_Lead_Source_Description__c</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Original_Lead_Source_Description__c</field>
            <operation>equals</operation>
            <value>Global_Contact_Form_Submission</value>
        </filters>
        <filters>
            <field>Most_Recent_Lead_Source_Description__c</field>
            <operation>equals</operation>
            <value>Global_Contact_Form_Submission</value>
        </filters>
        <filters>
            <field>Original_Lead_Source_Description__c</field>
            <operation>equals</operation>
            <value>Labs_Website_ContactUs_Submission</value>
        </filters>
        <filters>
            <field>Most_Recent_Lead_Source_Description__c</field>
            <operation>equals</operation>
            <value>Labs_Website_ContactUs_Submission</value>
        </filters>
        <filters>
            <field>Reason_for_Contact__c</field>
            <operation>equals</operation>
            <value>Pivotal Labs</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Back to Marketing,Rejected</value>
        </filters>
        <label>Labs "Contact Us" Form</label>
        <queue>Labs_Lead_Queue</queue>
        <sharedTo>
            <group>Labs_Lead_Queue</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Labs_Lead_Queue_New_Working</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Working</value>
        </filters>
        <label>Labs Lead Queue - New, Working</label>
        <queue>Labs_Lead_Queue</queue>
        <sharedTo>
            <group>Labs_Lead_Queue</group>
            <group>Pivotal_Labs</group>
            <roleAndSubordinates>Pivotal_Labs_Executive</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Labs_Lead_Queue_RAW</fullName>
        <columns>Labs__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Original_Lead_Source_Description__c</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Addition_Information__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Raw</value>
        </filters>
        <label>Labs Lead Queue - Raw</label>
        <queue>Labs_Lead_Queue</queue>
        <sharedTo>
            <roleAndSubordinates>Pivotal_Labs_Executive</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <validationRules>
        <fullName>LD002_Dont_use_converted_status</fullName>
        <active>true</active>
        <description>Leads must be converted using the convert button.</description>
        <errorConditionFormula>ISPICKVAL(Status, "Accepted")
&amp;&amp; ! IsConverted</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>Leads must be converted using the convert button. The Lead Status will automatically update to Accepted on Lead convert [LD002].</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LD003_Year_Company_was_founded</fullName>
        <active>true</active>
        <description>Year the company was founded should be a 4 digit number</description>
        <errorConditionFormula>(!(ISNUMBER(Year_Company_Was_Founded__c)) 
|| Len(Year_Company_Was_Founded__c) &gt; 4
|| VALUE(Year_Company_Was_Founded__c) &gt; YEAR(Today())
|| VALUE(Year_Company_Was_Founded__c) &lt; 1800) 
&amp;&amp;!ISBLANK(Year_Company_Was_Founded__c)</errorConditionFormula>
        <errorDisplayField>Year_Company_Was_Founded__c</errorDisplayField>
        <errorMessage>Please enter a valid 4 digit year, example 2010 [LD003].</errorMessage>
    </validationRules>
</CustomObject>